Fix blog align

--- a/public/assets/themes/comic.scss
+++ b/public/assets/themes/comic.scss
@@ -186,8 +186,9 @@ strong {
   margin: 1em auto;
 
   > section > em {
-    display: block;
     @include vignette;
+    display: block;
+    margin: 0 auto;
   }
 
   article {
